added empty api project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/MediaLibrary.API/obj
+/MediaLibrary.API/bin
