--- a/media-library-workspace/apps/media-library/.eslintrc.json
+++ b/media-library-workspace/apps/media-library/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "mediaLibraryWorkspace",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "media-library-workspace",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
