--- a/media-library-workspace/apps/media-library/project.json
+++ b/media-library-workspace/apps/media-library/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/media-library/src",
-  "prefix": "media-library-workspace",
+  "prefix": "app",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
