--- a/media-library-workspace/tsconfig.base.json
+++ b/media-library-workspace/tsconfig.base.json
@@ -14,7 +14,20 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@media-library-workspace/media-library-data": [
+        "libs/media-library-data/src/index.ts"
+      ],
+      "@media-library-workspace/media-library-ui": [
+        "libs/media-library-ui/src/index.ts"
+      ],
+      "@media-library-workspace/media-library-utils": [
+        "libs/media-library-utils/src/index.ts"
+      ],
+      "@media-library-workspace/testing-prefix": [
+        "libs/testing-prefix/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
