--- a/MediaLibrary.API/MediaLibrary.API.csproj
+++ b/MediaLibrary.API/MediaLibrary.API.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\MediaLibrary.Shared\MediaLibrary.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
