--- a/media-library/libs/ml-utility/project.json
+++ b/media-library/libs/ml-utility/project.json
@@ -21,6 +21,35 @@
           "libs/ml-utility/**/*.html"
         ]
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/ml-utility/.storybook",
+        "browserTarget": "ml-utility:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/ml-utility",
+        "configDir": "libs/ml-utility/.storybook",
+        "browserTarget": "ml-utility:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": []
