--- a/media-library/package.json
+++ b/media-library/package.json
@@ -42,7 +42,13 @@
     "@nrwl/jest": "15.0.10",
     "@nrwl/linter": "15.0.10",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/storybook": "15.0.10",
     "@nrwl/workspace": "15.0.10",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/angular": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/uuid": "^9.0.0",
@@ -66,6 +72,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "webpack": "^5.64.0"
   }
 }
