--- a/media-library/package.json
+++ b/media-library/package.json
@@ -11,39 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.0",
-    "@angular/common": "~14.2.0",
-    "@angular/compiler": "~14.2.0",
-    "@angular/core": "~14.2.0",
-    "@angular/forms": "~14.2.0",
-    "@angular/platform-browser": "~14.2.0",
-    "@angular/platform-browser-dynamic": "~14.2.0",
-    "@angular/router": "~14.2.0",
+    "@angular/animations": "15.0.4",
+    "@angular/common": "15.0.4",
+    "@angular/compiler": "15.0.4",
+    "@angular/core": "15.0.4",
+    "@angular/forms": "15.0.4",
+    "@angular/platform-browser": "15.0.4",
+    "@angular/platform-browser-dynamic": "15.0.4",
+    "@angular/router": "15.0.4",
     "@fortawesome/angular-fontawesome": "^0.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@nrwl/angular": "15.0.10",
+    "@nrwl/angular": "15.4.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.0",
-    "@angular-eslint/eslint-plugin": "~14.0.4",
-    "@angular-eslint/eslint-plugin-template": "~14.0.4",
-    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular-devkit/build-angular": "15.0.4",
+    "@angular-eslint/eslint-plugin": "15.0.0",
+    "@angular-eslint/eslint-plugin-template": "15.0.0",
+    "@angular-eslint/template-parser": "15.0.0",
     "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
-    "@angular/language-service": "~14.2.0",
-    "@nrwl/cli": "15.0.10",
-    "@nrwl/cypress": "15.0.10",
-    "@nrwl/eslint-plugin-nx": "15.0.10",
-    "@nrwl/jest": "15.0.10",
-    "@nrwl/linter": "15.0.10",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/storybook": "15.0.10",
-    "@nrwl/workspace": "15.0.10",
+    "@angular/compiler-cli": "15.0.4",
+    "@angular/language-service": "15.0.4",
+    "@nrwl/cli": "15.4.1",
+    "@nrwl/cypress": "15.4.1",
+    "@nrwl/eslint-plugin-nx": "15.4.1",
+    "@nrwl/jest": "15.4.1",
+    "@nrwl/linter": "15.4.1",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/storybook": "15.4.1",
+    "@nrwl/workspace": "15.4.1",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/angular": "~6.5.9",
     "@storybook/builder-webpack5": "~6.5.9",
@@ -61,9 +61,9 @@
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.2",
-    "ng-packagr": "~14.2.0",
-    "nx": "15.0.10",
+    "jest-preset-angular": "12.2.3",
+    "ng-packagr": "15.0.3",
+    "nx": "15.4.1",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -76,3 +76,4 @@
     "webpack": "^5.64.0"
   }
 }
+
