added angular proxy config

--- a/media-library/apps/ml-app/project.json
+++ b/media-library/apps/ml-app/project.json
@@ -64,7 +64,10 @@
           "browserTarget": "ml-app:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/ml-app/proxy.config.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
