--- a/media-library/libs/ml-data/project.json
+++ b/media-library/libs/ml-data/project.json
@@ -6,18 +6,14 @@
   "prefix": "ml",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ml-data/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/ml-data/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "options": {
-        "lintFilePatterns": ["libs/ml-data/**/*.ts", "libs/ml-data/**/*.html"]
-      }
+      "executor": "@nx/eslint:lint"
     }
   },
   "tags": []
