--- a/media-library/libs/ml-utility/project.json
+++ b/media-library/libs/ml-utility/project.json
@@ -6,21 +6,14 @@
   "prefix": "ml",
   "targets": {
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ml-utility/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/ml-utility/jest.config.ts"
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "options": {
-        "lintFilePatterns": [
-          "libs/ml-utility/**/*.ts",
-          "libs/ml-utility/**/*.html"
-        ]
-      }
+      "executor": "@nx/eslint:lint"
     },
     "storybook": {
       "executor": "@storybook/angular:start-storybook",
