--- a/media-library/package.json
+++ b/media-library/package.json
@@ -11,69 +11,70 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.4",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/router": "15.0.4",
+    "@angular/animations": "17.0.6",
+    "@angular/common": "17.0.6",
+    "@angular/compiler": "17.0.6",
+    "@angular/core": "17.0.6",
+    "@angular/forms": "17.0.6",
+    "@angular/platform-browser": "17.0.6",
+    "@angular/platform-browser-dynamic": "17.0.6",
+    "@angular/router": "17.0.6",
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@nrwl/angular": "15.4.1",
-    "rxjs": "~7.5.0",
+    "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.14.2",
+    "@nx/angular": "17.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "15.0.4",
-    "@angular/language-service": "15.0.4",
-    "@nrwl/cli": "15.4.1",
-    "@nrwl/cypress": "15.4.1",
-    "@nrwl/eslint-plugin-nx": "15.4.1",
-    "@nrwl/jest": "15.4.1",
-    "@nrwl/linter": "15.4.1",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/storybook": "15.4.1",
-    "@nrwl/workspace": "15.4.1",
-    "@storybook/addon-essentials": "~6.5.9",
-    "@storybook/angular": "~6.5.9",
-    "@storybook/builder-webpack5": "~6.5.9",
-    "@storybook/core-server": "~6.5.9",
-    "@storybook/manager-webpack5": "~6.5.9",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@angular-devkit/build-angular": "17.0.6",
+    "@angular-devkit/core": "17.0.6",
+    "@angular-devkit/schematics": "17.0.6",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.6",
+    "@angular/language-service": "17.0.6",
+    "@nx/cypress": "17.2.0",
+    "@nx/eslint": "17.2.0",
+    "@nx/eslint-plugin": "17.2.0",
+    "@nx/jest": "17.2.0",
+    "@nx/storybook": "17.2.0",
+    "@nx/workspace": "17.2.0",
+    "@schematics/angular": "17.0.6",
+    "@storybook/addon-essentials": "7.6.4",
+    "@storybook/angular": "7.6.4",
+    "@storybook/core-server": "7.6.4",
+    "@types/jest": "29.4.4",
+    "@types/node": "18.16.9",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "autoprefixer": "^10.4.13",
     "cypress": "^10.7.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
-    "ng-packagr": "15.0.3",
-    "nx": "15.4.1",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-cypress": "2.13.4",
+    "eslint-plugin-storybook": "^0.6.15",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.1.4",
+    "ng-packagr": "17.0.2",
+    "nx": "17.2.0",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
+    "typescript": "5.2.2",
     "webpack": "^5.64.0"
   }
 }
-
