--- a/media-library/libs/ml-ui/project.json
+++ b/media-library/libs/ml-ui/project.json
@@ -14,6 +14,41 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/ml-ui/.storybook",
+        "browserTarget": "ml-ui:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/ml-ui",
+        "configDir": "libs/ml-ui/.storybook",
+        "browserTarget": "ml-ui:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c libs/ml-ui/.storybook --url=http://localhost:4400"
+      }
     }
   },
   "tags": []
