--- a/media-library/package.json
+++ b/media-library/package.json
@@ -22,11 +22,11 @@
     "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@nx/angular": "17.2.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "zone.js": "0.14.2",
-    "@nx/angular": "17.2.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.0.6",
@@ -42,12 +42,19 @@
     "@nx/eslint": "17.2.0",
     "@nx/eslint-plugin": "17.2.0",
     "@nx/jest": "17.2.0",
+    "@nx/js": "17.2.0",
     "@nx/storybook": "17.2.0",
     "@nx/workspace": "17.2.0",
     "@schematics/angular": "17.0.6",
     "@storybook/addon-essentials": "7.6.4",
+    "@storybook/addon-interactions": "^7.5.3",
     "@storybook/angular": "7.6.4",
     "@storybook/core-server": "7.6.4",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "29.4.4",
     "@types/node": "18.16.9",
     "@types/uuid": "^9.0.0",
