--- a/media-library/package.json
+++ b/media-library/package.json
@@ -80,6 +80,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "storybook-dark-mode": "^3.0.3",
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
