--- a/media-library/package.json
+++ b/media-library/package.json
@@ -22,6 +22,11 @@
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@ngrx/component-store": "~17.0.0",
+    "@ngrx/effects": "~17.0.0",
+    "@ngrx/entity": "~17.0.0",
+    "@ngrx/router-store": "~17.0.0",
+    "@ngrx/store": "~17.0.0",
     "@nx/angular": "17.2.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
@@ -38,6 +43,8 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "17.0.6",
     "@angular/language-service": "17.0.6",
+    "@ngrx/schematics": "~17.0.0",
+    "@ngrx/store-devtools": "~17.0.0",
     "@nx/cypress": "17.2.0",
     "@nx/eslint": "17.2.0",
     "@nx/eslint-plugin": "17.2.0",
@@ -68,6 +75,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-storybook": "^0.6.15",
+    "jasmine-marbles": "~0.9.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "13.1.4",
