--- a/media-library/package.json
+++ b/media-library/package.json
@@ -28,6 +28,7 @@
     "@ngrx/router-store": "~17.0.0",
     "@ngrx/store": "~17.0.0",
     "@nx/angular": "17.2.0",
+    "@popperjs/core": "^2.11.8",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
