--- a/media-library/package.json
+++ b/media-library/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.6",
-    "@angular/common": "17.0.6",
-    "@angular/compiler": "17.0.6",
-    "@angular/core": "17.0.6",
-    "@angular/forms": "17.0.6",
-    "@angular/platform-browser": "17.0.6",
-    "@angular/platform-browser-dynamic": "17.0.6",
-    "@angular/router": "17.0.6",
+    "@angular/animations": "17.3.12",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.12",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.12",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
@@ -27,33 +27,33 @@
     "@ngrx/entity": "~17.0.0",
     "@ngrx/router-store": "~17.0.0",
     "@ngrx/store": "~17.0.0",
-    "@nx/angular": "17.2.0",
+    "@nx/angular": "18.3.5",
     "@popperjs/core": "^2.11.8",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "zone.js": "0.14.2"
+    "zone.js": "0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.6",
-    "@angular-devkit/core": "17.0.6",
-    "@angular-devkit/schematics": "17.0.6",
-    "@angular-eslint/eslint-plugin": "17.1.1",
-    "@angular-eslint/eslint-plugin-template": "17.1.1",
-    "@angular-eslint/template-parser": "17.1.1",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "17.0.6",
-    "@angular/language-service": "17.0.6",
+    "@angular-devkit/build-angular": "17.3.9",
+    "@angular-devkit/core": "17.3.9",
+    "@angular-devkit/schematics": "17.3.9",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/cli": "~17.3.0",
+    "@angular/compiler-cli": "17.3.12",
+    "@angular/language-service": "17.3.12",
     "@ngrx/schematics": "~17.0.0",
     "@ngrx/store-devtools": "~17.0.0",
-    "@nx/cypress": "17.2.0",
-    "@nx/eslint": "17.2.0",
-    "@nx/eslint-plugin": "17.2.0",
-    "@nx/jest": "17.2.0",
-    "@nx/js": "17.2.0",
-    "@nx/storybook": "17.2.0",
-    "@nx/workspace": "17.2.0",
-    "@schematics/angular": "17.0.6",
+    "@nx/cypress": "18.3.5",
+    "@nx/eslint": "18.3.5",
+    "@nx/eslint-plugin": "18.3.5",
+    "@nx/jest": "18.3.5",
+    "@nx/js": "18.3.5",
+    "@nx/storybook": "18.3.5",
+    "@nx/workspace": "18.3.5",
+    "@schematics/angular": "17.3.9",
     "@storybook/addon-a11y": "^7.6.5",
     "@storybook/addon-essentials": "7.6.4",
     "@storybook/addon-interactions": "^7.5.3",
@@ -63,25 +63,25 @@
     "@storybook/jest": "^0.2.3",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.85",
     "@types/jest": "29.5.11",
-    "@types/node": "20.10.4",
+    "@types/node": "^18.16.9",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
+    "@typescript-eslint/eslint-plugin": "7.3.0",
+    "@typescript-eslint/parser": "7.3.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^13.6.1",
-    "eslint": "8.55.0",
+    "cypress": "^13.6.6",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-storybook": "^0.6.15",
     "jasmine-marbles": "~0.9.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "13.1.4",
-    "ng-packagr": "17.0.2",
-    "nx": "17.2.0",
+    "jest-preset-angular": "14.0.4",
+    "ng-packagr": "17.3.0",
+    "nx": "18.3.5",
     "postcss": "^8.4.5",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~9.3.0",
@@ -93,7 +93,7 @@
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
+    "typescript": "5.4.5",
     "webpack": "^5.64.0"
   }
 }
