--- a/media-library/package.json
+++ b/media-library/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "~17.0.0",
     "@nx/angular": "18.3.5",
     "@popperjs/core": "^2.11.8",
+    "ag-grid-angular": "^32.2.1",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
