--- a/media-library/package.json
+++ b/media-library/package.json
@@ -45,6 +45,7 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "17.3.12",
     "@angular/language-service": "17.3.12",
+    "@chromatic-com/storybook": "^1.9.0",
     "@ngrx/schematics": "~17.0.0",
     "@ngrx/store-devtools": "~17.0.0",
     "@nx/cypress": "18.3.5",
@@ -52,18 +53,19 @@
     "@nx/eslint-plugin": "18.3.5",
     "@nx/jest": "18.3.5",
     "@nx/js": "18.3.5",
-    "@nx/storybook": "18.3.5",
+    "@nx/storybook": "^19.8.4",
     "@nx/workspace": "18.3.5",
     "@schematics/angular": "17.3.9",
-    "@storybook/addon-a11y": "^7.6.5",
-    "@storybook/addon-essentials": "7.6.4",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-styling-webpack": "^0.0.5",
-    "@storybook/angular": "7.6.4",
-    "@storybook/core-server": "7.6.4",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/test-runner": "^0.16.0",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-a11y": "^8.3.5",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/angular": "^8.3.5",
+    "@storybook/core-common": "^8.3.5",
+    "@storybook/core-server": "^8.3.5",
+    "@storybook/preview-api": "^8.3.5",
+    "@storybook/test": "^8.3.5",
+    "@storybook/test-runner": "^0.19.1",
     "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.85",
     "@types/jest": "29.5.11",
@@ -76,7 +78,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^0.9.0",
     "jasmine-marbles": "~0.9.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
@@ -90,7 +92,7 @@
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook-dark-mode": "^3.0.3",
+    "storybook-dark-mode": "^4.0.2",
     "tailwindcss": "^3.2.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
