--- a/media-library/package.json
+++ b/media-library/package.json
@@ -11,6 +11,11 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/angular": "^32.2.1",
+    "@ag-grid-community/client-side-row-model": "^32.2.1",
+    "@ag-grid-community/core": "^32.2.1",
+    "@ag-grid-community/styles": "^32.2.1",
+    "@ag-grid-enterprise/row-grouping": "^32.2.1",
     "@angular/animations": "17.3.12",
     "@angular/common": "17.3.12",
     "@angular/compiler": "17.3.12",
@@ -29,7 +34,6 @@
     "@ngrx/store": "~17.0.0",
     "@nx/angular": "18.3.5",
     "@popperjs/core": "^2.11.8",
-    "ag-grid-angular": "^32.2.1",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
