--- a/media-library/package.json
+++ b/media-library/package.json
@@ -17,6 +17,7 @@
     "@ag-grid-community/styles": "^32.2.1",
     "@ag-grid-enterprise/filter-tool-panel": "^32.2.1",
     "@ag-grid-enterprise/row-grouping": "^32.2.1",
+    "@ag-grid-enterprise/set-filter": "^32.2.1",
     "@angular/animations": "17.3.12",
     "@angular/common": "17.3.12",
     "@angular/compiler": "17.3.12",
