--- a/media-library/package.json
+++ b/media-library/package.json
@@ -42,7 +42,7 @@
     "zone.js": "0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.9",
+    "@angular-devkit/build-angular": "^17.3.10",
     "@angular-devkit/core": "17.3.9",
     "@angular-devkit/schematics": "17.3.9",
     "@angular-eslint/eslint-plugin": "17.3.0",
