--- a/media-library/package.json
+++ b/media-library/package.json
@@ -16,6 +16,7 @@
     "@ag-grid-community/core": "^32.2.1",
     "@ag-grid-community/styles": "^32.2.1",
     "@ag-grid-enterprise/filter-tool-panel": "^32.2.1",
+    "@ag-grid-enterprise/menu": "^32.2.1",
     "@ag-grid-enterprise/row-grouping": "^32.2.1",
     "@ag-grid-enterprise/set-filter": "^32.2.1",
     "@angular/animations": "17.3.12",
