--- a/media-library/package.json
+++ b/media-library/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "17.3.12",
     "@fortawesome/angular-fontawesome": "^0.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@ngrx/component-store": "~17.0.0",
     "@ngrx/effects": "~17.0.0",
