--- a/MediaLibrary.DAL/efpt.config.json
+++ b/MediaLibrary.DAL/efpt.config.json
@@ -1,17 +1,18 @@
 ﻿{
-   "CodeGenerationMode": 0,
+   "CodeGenerationMode": 4,
    "ContextClassName": "MediaLibraryEntities",
    "ContextNamespace": null,
-   "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": "DbContexts",
    "OutputPath": "Models",
+   "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "MediaLibrary.DAL",
    "Schemas": null,
    "SelectedHandlebarsLanguage": 0,
    "SelectedToBeGenerated": 0,
+   "T4TemplatePath": null,
    "Tables": [
       {
          "Name": "[dbo].[Album]",
@@ -74,32 +75,30 @@
       {
          "Name": "[dbo].[TrackPath]",
          "ObjectType": 0
-      },
-      {
-         "ExcludedColumns": [
-            "Status",
-            "Type"
-         ],
-         "Name": "[dbo].[Transaction]",
-         "ObjectType": 0
       }
    ],
-   "UiHint": "MediaLibrary.DB\\MediaLibrary.DB.sqlproj",
+   "UiHint": null,
+   "UncountableWords": null,
+   "UseAsyncStoredProcedureCalls": true,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
+   "UseDateOnlyTimeOnly": false,
    "UseDbContextSplitting": false,
+   "UseDecimalDataAnnotationForSprocResult": true,
    "UseFluentApiOnly": false,
    "UseHandleBars": false,
    "UseHierarchyId": false,
    "UseInflector": true,
    "UseLegacyPluralizer": false,
    "UseManyToManyEntity": false,
-   "UseNoConstructor": false,
    "UseNoDefaultConstructor": true,
    "UseNoNavigations": false,
    "UseNoObjectFilter": false,
    "UseNodaTime": false,
    "UseNullableReferences": false,
+   "UsePrefixNavigationNaming": false,
    "UseSchemaFolders": false,
-   "UseSpatial": false
+   "UseSchemaNamespaces": false,
+   "UseSpatial": false,
+   "UseT4": false
 }
