--- a/media-library/package.json
+++ b/media-library/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@ag-grid-community/angular": "^32.2.1",
-    "@ag-grid-community/client-side-row-model": "^32.2.1",
+    "@ag-grid-community/angular": "^32.2.2",
+    "@ag-grid-community/client-side-row-model": "^32.2.2",
     "@ag-grid-community/core": "^32.2.1",
-    "@ag-grid-community/styles": "^32.2.1",
-    "@ag-grid-enterprise/filter-tool-panel": "^32.2.1",
-    "@ag-grid-enterprise/menu": "^32.2.1",
+    "@ag-grid-community/styles": "^32.2.2",
+    "@ag-grid-enterprise/filter-tool-panel": "^32.2.2",
+    "@ag-grid-enterprise/menu": "^32.2.2",
     "@ag-grid-enterprise/row-grouping": "^32.2.1",
-    "@ag-grid-enterprise/set-filter": "^32.2.1",
+    "@ag-grid-enterprise/set-filter": "^32.2.2",
     "@angular/animations": "17.3.12",
     "@angular/common": "17.3.12",
     "@angular/compiler": "17.3.12",
@@ -27,10 +27,10 @@
     "@angular/platform-browser": "17.3.12",
     "@angular/platform-browser-dynamic": "17.3.12",
     "@angular/router": "17.3.12",
-    "@fortawesome/angular-fontawesome": "^0.14.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ngrx/component-store": "~17.0.0",
     "@ngrx/effects": "~17.0.0",
     "@ngrx/entity": "~17.0.0",
@@ -39,8 +39,8 @@
     "@nx/angular": "18.3.5",
     "@popperjs/core": "^2.11.8",
     "rxjs": "7.8.1",
-    "tslib": "^2.3.0",
-    "uuid": "^9.0.0",
+    "tslib": "^2.8.0",
+    "uuid": "^9.0.1",
     "zone.js": "0.14.8"
   },
   "devDependencies": {
@@ -64,47 +64,47 @@
     "@nx/storybook": "^19.8.4",
     "@nx/workspace": "18.3.5",
     "@schematics/angular": "17.3.9",
-    "@storybook/addon-a11y": "^8.3.5",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-a11y": "^8.3.6",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/angular": "^8.3.5",
-    "@storybook/core-common": "^8.3.5",
-    "@storybook/core-server": "^8.3.5",
-    "@storybook/preview-api": "^8.3.5",
+    "@storybook/angular": "^8.3.6",
+    "@storybook/core-common": "^8.3.6",
+    "@storybook/core-server": "^8.3.6",
+    "@storybook/preview-api": "^8.3.6",
     "@storybook/test": "^8.3.5",
     "@storybook/test-runner": "^0.19.1",
     "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.85",
     "@types/jest": "29.5.11",
-    "@types/node": "^18.16.9",
-    "@types/uuid": "^9.0.0",
+    "@types/node": "^18.19.57",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "7.3.0",
     "@typescript-eslint/parser": "7.3.0",
-    "autoprefixer": "^10.4.13",
-    "cypress": "^13.6.6",
+    "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-storybook": "^0.9.0",
-    "jasmine-marbles": "~0.9.1",
+    "jasmine-marbles": "^0.9.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.0.4",
     "ng-packagr": "17.3.0",
     "nx": "18.3.5",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.47",
     "postcss-import": "~15.1.0",
     "postcss-preset-env": "~9.3.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "storybook-dark-mode": "^4.0.2",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.4.14",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.2",
     "typescript": "5.4.5",
-    "webpack": "^5.64.0"
+    "webpack": "^5.95.0"
   }
 }
